Fix overflow-x bug

--- a/sass/modules/_pages.scss
+++ b/sass/modules/_pages.scss
@@ -12,6 +12,7 @@
 .inner-body {
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
