--- a/static/css/novel.css
+++ b/static/css/novel.css
@@ -1130,7 +1130,7 @@ a:hover, a:focus, a:active { color: #0000bf; }
 /* ---------------------------------------------------------------------------- page */
 .novel { -webkit-transition: margin-right 300ms ease; -moz-transition: margin-right 300ms ease; -o-transition: margin-right 300ms ease; transition: margin-right 300ms ease; position: relative; float: left; width: 100%; height: 100%; }
 
-.inner-body { height: 100%; overflow-y: auto; -webkit-overflow-scrolling: touch; }
+.inner-body { height: 100%; overflow-y: auto; overflow-x: hidden; -webkit-overflow-scrolling: touch; }
 
 .page { min-height: 100%; }
 
